--- a/CoffeeCraftJava/app/src/main/res/values/strings.xml
+++ b/CoffeeCraftJava/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="neutral">neutral</string>
     <string name="happy">happy\n</string>
     <string name="joyfull">joyfull\n</string>
+    <string name="ecstasy">ecstasy</string>
 </resources>
